--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@
 # Site URL (update for production)
 NEXT_PUBLIC_SITE_URL=https://voice.hypeon.ai
 
+# Gmail Configuration for sending emails
+# Use the Gmail account you want to send FROM
+GMAIL_USER=your-email@gmail.com
+# Generate an App Password from Google Account settings
+# https://support.google.com/accounts/answer/185833
+GMAIL_APP_PASSWORD=your-16-character-app-password
+
 # Analytics (optional)
 # NEXT_PUBLIC_GA_ID=
 # NEXT_PUBLIC_POSTHOG_KEY=
