--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "lucide-react": "^0.563.0",
     "next": "^15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "6.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
+    "@types/nodemailer": "7.0.5",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
