update real time demo

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ GMAIL_APP_PASSWORD=your-16-character-app-password
 
 # API Endpoints (if needed)
 # NEXT_PUBLIC_API_URL=
+
+# Retell AI Voice Agent (for "Start A Conversation" / "Call Demo Receptionist")
+# Get your API key from https://dashboard.retellai.com
+RETELL_API_KEY=your-retell-api-key
+# Agent ID for "Website-demo" agent (find in Retell dashboard → Voice Agents)
+RETELL_AGENT_ID=your-agent-id
