--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "^15.1.4",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "retell-client-js-sdk": "2.0.7",
+    "sharp": "0.34.5"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
